Ah... who knows ?

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -19,6 +19,7 @@ div {
     box-sizing: border-box;
 }
 #solar_system {
+    transform-style: preserve-3d;
     position:absolute;
     margin-top:50px;
 }
