was it the last or the first ?

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -631,6 +631,7 @@ div {
     6.67% {
         color: rgba(0, 0, 255, 0.8); /* Pure Blue */
         background-color: #4169e199; /* Royal Blue */
+        box-shadow: 0 0 1em 1em #4682b460; /* Steel Blue Glow */
     }
 }
 
