--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -75,6 +75,10 @@
 </div>
 </div>
 
+<div class="ASTEROID">
+<img src="{% static 'asteroid_belt.png' %}">
+</div>
+
 <div class="JUPITER">
 <div style="--t: {{ t2_plus_1 }}" class="jupiter-globe">
 <div style="--c: {{ t }}" class="line radius h jupiter-h"></div>
