--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -75,7 +75,7 @@
 </div>
 </div>
 
-<div class="ASTEROID">
+<div id="ASTEROID" class="ASTEROID">
 <img src="{% static 'webapp/asteroid_belt.png' %}">
 </div>
 
