yeah common mistake

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -76,7 +76,7 @@
 </div>
 
 <div id="ASTEROID" class="ASTEROID">
-<img src="{% static 'webapp/asteroid_belt.png' %}">
+<img id="ASTEROID" src="{% static 'webapp/asteroid_belt.png' %}">
 </div>
 
 <div class="JUPITER">
