this should make the asteroids rotate

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -75,7 +75,7 @@
 </div>
 </div>
 
-<img id="ASTEROID" src="{% static 'webapp/asteroid_belt.png' %}">
+<img class="ASTEROID" id="ASTEROID" src="{% static 'webapp/asteroid_belt.png' %}">
 
 <div class="JUPITER">
 <div style="--t: {{ t2_plus_1 }}" class="jupiter-globe">
