--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -675,10 +675,13 @@ div {
 }
 #ASTEROID {
     opacity:0.25;
-    width:540px;
+    width:545px;
     height:auto;
     position:absolute;
     top:50%;
     left:50%;
     transform:translate(-50%, -50%);
+}
+.ASTEROID{
+    animation: rotate 2s linear infinite;
 }
