--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -60,6 +60,8 @@
 {% for line in negative_lines %}
 <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h earth-h"></div>
 {% endfor %}
+<p id="trail" class="trail">⸱</p>
+//- Ok but this is like the best idea I've ever gotten
 </div>
 //- MOON STARTS HERE --->
 <div class="MOON">
