--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -62,7 +62,7 @@
 {% endfor %}
 </div>
 <div id="trail"></div>
-<script>
+script.
 document.addEventListener('mousemove', function(e) {
 // Create a new trail element
 const trail = document.createElement('div');
@@ -81,7 +81,7 @@ document.getElementById('trail').appendChild(trailing);
 setTimeout(() => {
     trail.remove();
 }, 5000);
-});</script>
+});
 <div class="MOON">
 <div style="--t: {{ t2_plus_1 }}" class="moon-globe">
 <div style="--c: {{ t }}" class="line radius h moon-h"></div>
