--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -62,26 +62,27 @@
 {% endfor %}
 </div>
 <div id="trail"></div>
-script.
+<script>
 document.addEventListener('mousemove', function(e) {
 // Create a new trail element
-const trail = document.createElement('div');
-trail.textContent = '⸱';
-trail.classList.add('trailing');
+const trailElement = document.createElement('div');
+trailElement.textContent = '⸱';
+trailElement.classList.add('trailing');
 
 // Position the trail element at the mouse cursor's location
-trail.style.left = e.clientX + 'px';
-trail.style.top = e.clientY + 'px';
+trailElement.style.left = e.clientX + 'px';
+trailElement.style.top = e.clientY + 'px';
 
 // Add the new element to the container
-document.getElementById('trail').appendChild(trailing);
+document.getElementById('trail').appendChild(trailElement);
 
 // Remove the element after the animation is complete (5 seconds)
 // This prevents the DOM from getting too large and slowing down the page
 setTimeout(() => {
-    trail.remove();
+    trailElement.remove();
 }, 5000);
 });
+</script>
 <div class="MOON">
 <div style="--t: {{ t2_plus_1 }}" class="moon-globe">
 <div style="--c: {{ t }}" class="line radius h moon-h"></div>
