--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -785,3 +785,10 @@ div {
 .ASTEROID {
     animation: rotate-image 90s linear infinite;
 }
+.point {
+    width: 5px;
+    height: 5px;
+    color:white;
+    position: absolute;
+    border-radius: 50%;
+}
