--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -792,3 +792,9 @@ div {
     position: absolute;
     border-radius: 50%;
 }
+#earth_simp{
+    position:absolute;
+    top:50;
+    left:50%;
+    transform:translate(-50%, -50%);
+}
