--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -72,12 +72,11 @@
 {% endfor %}
 </div>
 </div>
+<div id="earth_simp"></div>
 </div>
 
-<div id="container"></div>
-
 script.
-    const container = document.getElementById('container');
+    const container = document.getElementById('earth_simp');
     function spawnPoint() {
     const point = document.createElement('div');
     point.classList.add('point');
