--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -786,7 +786,7 @@ div {
     animation: rotate-image 90s linear infinite;
 }
 .point {
-    width: 3Opx;
+    width: 30px;
     height: 30px;
     color:white;
     position: absolute;
@@ -794,6 +794,8 @@ div {
     opacity:1;
 }
 #earth_simp{
+    width:30px;
+    height:30px;
     position:absolute;
     top:50;
     left:50%;
