ok so I didn't notice but everything was in html ? How does that happen, Idk...

--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -23,6 +23,7 @@ div {
     margin-top:50px;
 }
 #explain_box {
+    font-family:'Orbitron', sans-serif;
     position:absolute;
     top:5%;
     left:50%;
